--- a/codice/lista_processo/Makefile
+++ b/codice/lista_processo/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -Wall -w -O1
 exe = process_list_main
-my_libraries = ../utility/macro.h ../processo/process.h ../processo/process.c process_list.h process_list.c ../setting/setting.h ../setting/setting.c ../utility/utility.h ../utility/utility.c process_list_main.c
+my_libraries = ../utility/macro.h ../processo/process.h ../processo/process.c process_list.h process_list.c ../setting/setting.h ../setting/setting.c ../utility/utility.h ../utility/utility.c ../statistics/stat.h ../statistics/stat.c process_list_main.c
 
 all:
 	$(CC) -o $(exe) $(my_libraries) $(CFLAGS)
